src/objects/Project_Survey__c.object
<CustomObject>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_ID__c</fullName>
        <formula>CASESAFEID(Contact__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>Contact__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Project Surveys</relationshipLabel>
        <relationshipName>Project_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>How_can_we_do_better__c</fullName>
        <label>XX.4. How can we do better?(Deprecated)</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>de</fullName>
                </value>
                <value>
                    <fullName>en</fullName>
                </value>
                <value>
                    <fullName>en/de</fullName>
                </value>
                <value>
                    <fullName>es</fullName>
                </value>
                <value>
                    <fullName>fr</fullName>
                </value>
                <value>
                    <fullName>it</fullName>
                </value>
                <value>
                    <fullName>ja</fullName>
                </value>
                <value>
                    <fullName>ko</fullName>
                </value>
                <value>
                    <fullName>pt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MicroStrategy_Team_Performance__c</fullName>
        <label>XX.2. MicroStrategy Team (Deprecated)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1-Struggled</fullName>
                </value>
                <value>
                    <fullName>2-Mostly Performed Professionally</fullName>
                </value>
                <value>
                    <fullName>3-Performed Professionally</fullName>
                </value>
                <value>
                    <fullName>4-Exceeded Professional Expectations</fullName>
                </value>
                <value>
                    <fullName>5-Excelled Professionally</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Project_Contacts__c.Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Project_Contacts__c</referenceTo>
        <relationshipLabel>Project Surveys</relationshipLabel>
        <relationshipName>Project_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Success__c</fullName>
        <label>XX.1. Project Success? (Deprecated)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-Does Not Meet Expectations</fullName>
                </value>
                <value>
                    <fullName>2-Partially Meets Expectations</fullName>
                </value>
                <value>
                    <fullName>3-Meets Expectations</fullName>
                </value>
                <value>
                    <fullName>4-Exceeds Expectations</fullName>
                </value>
                <value>
                    <fullName>5-Extraordinary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Project Surveys</relationshipLabel>
        <relationshipName>Project_Surveys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <formula>&quot;FY&quot;&amp;  RIGHT(TEXT(YEAR(DATEVALUE(Sent_Date__c))), 2)  &amp;&quot; Q&quot;&amp;TEXT(FLOOR(((MONTH(DATEVALUE( Sent_Date__c ))-1)/3)+1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Performance_to_budget_and_scope__c</fullName>
        <label>XX.3. Rate Performance (Deprecated)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1-Dramatically Behind Schedule or Over Budget</fullName>
                </value>
                <value>
                    <fullName>2-Slightly Behind Schedule or Over Budget</fullName>
                </value>
                <value>
                    <fullName>3-On Schedule and Within Budget  With Accepted Variations</fullName>
                </value>
                <value>
                    <fullName>4-Always On Schedule and Within Budget</fullName>
                </value>
                <value>
                    <fullName>5-Ahead of Schedule or Under Budget</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resent_Date__c</fullName>
        <label>Resent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Responded_Date__c</fullName>
        <label>Responded Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Responded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Responded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Practice Owner</fullName>
                </value>
                <value>
                    <fullName>Project Manager</fullName>
                </value>
                <value>
                    <fullName>Technical Executive</fullName>
                </value>
                <value>
                    <fullName>Business Executive</fullName>
                </value>
                <value>
                    <fullName>Customer Project Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sent_Date__c</fullName>
        <label>Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Survey_Link__c</fullName>
        <formula>HYPERLINK(&quot;http://www.surveygizmo.com/s3/3827475/Quarterly-Consulting-Project-Survey?psid=&quot;&amp; Id&amp;&quot;&amp;sglocale=en&quot; , &quot;Survey Link&quot; ,&quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unsubscribed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unsubscribed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X1ANewSurvey__c</fullName>
        <description>2. Are you satisfied with the performance &amp; capabilities of the MicroStrategy professionals involved?</description>
        <inlineHelpText>2. Are you satisfied with the performance &amp; capabilities of the MicroStrategy professionals involved?</inlineHelpText>
        <label>2. Performance/capabilities of MSTR team</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1BNewSurvey__c</fullName>
        <description>1. Are you satisfied with the result of the project to date?</description>
        <inlineHelpText>1. Are you satisfied with the result of the project to date?</inlineHelpText>
        <label>1. Results of project to date</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1CNewSurvey__c</fullName>
        <description>3. Are you satisfied with the way the scope, timing, and resources were managed?</description>
        <inlineHelpText>3. Are you satisfied with the way the scope, timing, and resources were managed?</inlineHelpText>
        <label>3. Scope, timing and resources</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1DNewSurvey__c</fullName>
        <label>XX.1d. Performance to budget(Deprecated)</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1_Project_Success__c</fullName>
        <formula>VALUE( LEFT(TEXT( Project_Success__c) , 1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>XX.# 1. Project Success (Deprecated)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2NewSurvey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>4. Would you recommend MicroStrategy Services?</description>
        <inlineHelpText>4. Would you recommend MicroStrategy Services?</inlineHelpText>
        <label>4. Would you recommend MSTR?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2__c</fullName>
        <formula>VALUE( LEFT(TEXT( MicroStrategy_Team_Performance__c ) , 1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>XX.# 2. MicroStrategy Team (Deprecated)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3NewSurvey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>5. Do you anticipate engaging MicroStrategy for additional work in the future?</description>
        <inlineHelpText>5. Do you anticipate engaging MicroStrategy for additional work in the future?</inlineHelpText>
        <label>5. Plan to engage MSTR in the future</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X3_Rate_Performance_Budget__c</fullName>
        <formula>VALUE( LEFT(TEXT( Rate_Performance_to_budget_and_scope__c ) , 1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>XX.# 3. Rate Performance To (Deprecated)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X4NewSurvey__c</fullName>
        <description>6. Do you have any feedback for us, or suggestions to improve our performance in the future?</description>
        <inlineHelpText>6. Do you have any feedback for us, or suggestions to improve our performance in the future?</inlineHelpText>
        <label>6. Feedback or suggestions to improve</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>is_Internal__c</fullName>
        <formula>CONTAINS( Contact__r.Email, &apos;@microstrategy.com&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>is Internal</label>
        <type>Checkbox</type>
    </fields>
    <label>Project Survey</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Project Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Surveys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>